fix too large logo problem

--- a/css/main.css
+++ b/css/main.css
@@ -1215,7 +1215,7 @@ body {
 }
 
 .clients .img-box:last-child {
-  width: 40%;
+  width: 20%;
   margin-left: auto;
   margin-right: auto;
 }
