--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -215,7 +215,7 @@
         width: auto;
 
         &:last-child {
-            width: 40%;
+            width: 20%;
             margin-left: auto;
             margin-right: auto;
         }
